--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>Katas 7</title>
     </head>
     <body>
-        
+        <h1>Katas 7</h1>
         <script src="katas7.js"></script>
     </body>
 </html>
